@@ -35,7 +35,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -64,7 +63,7 @@ public class ProductServiceImpl implements ProductService {
 
             List<ProductVariant> variants = request.getVariants().stream()
                     .map(productVariantMapper::toProductVariant)
-                    .collect(Collectors.toList());
+                    .toList();
             product.setVariants(variants);
 
             product = productRepository.save(product);
